--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.7.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
